base/httpbin/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpbin
spec:
  selector:
    matchLabels:
      deployment: httpbin
  template:
    metadata:
      labels:
        deployment: httpbin
    spec:
      containers:
        - name: httpbin
          image: quay.io/rh_integration/httpbin:smadis
          ports:
            - containerPort: 8080
              protocol: TCP
