base/httpbin/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: httpbin
spec:
  selector:
    deployment: httpbin
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
