base/httpbin/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: httpbin
spec:
  to:
    kind: Service
    name: httpbin
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
